--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,10 +2,10 @@ name: CI
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "main" ]
   pull_request:
   pull_request_target:
-    branches: [ "master" ]
+    branches: [ "main" ]
 
 jobs:
   ci:
